MP path based static content should use index.html as the default index file (#4735)